--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>my second repo</title>
 </head>
 <body>
-    
+    <h3>amr aj k net nai </h3>
+    <h2>tony bhai a net a  problem</h2>
+    <h4>jamy bhai bsy aisa git shikhlam</h4>
 </body>
 </html>
