--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="arko.jpg" alt="">
+    <img src="arko mama.jpg.jpg" alt="">
     <h3>amr aj k net nai </h3>
     <h2>tony bhai a net a  problem</h2>
     <h4>jamy bhai bsy aisa git shikhlam</h4>
+
 </body>
 </html>
