--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <img src="arko.jpg" alt="">
     <img src="arko mama.jpg.jpg" alt="">
+    <img src="taka.jpg" alt="">
     <h3>amr aj k net nai </h3>
     <h2>tony bhai a net a  problem</h2>
     <h4>jamy bhai bsy aisa git shikhlam</h4>
